plugins {
    id "java"
}

sourceCompatibility = 14
targetCompatibility = 8

tasks.withType(JavaCompile).all {
    options.compilerArgs = [
            "--release", "8",
            '--enable-preview',
    ]

    doFirst {
        options.compilerArgs = options.compilerArgs.findAll {
            it != '--enable-preview'
        }
    }
}

test {
    sourceCompatibility = targetCompatibility = 8

    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

dependencies {
    annotationProcessor project(":jabel-javac-plugin")

    testImplementation 'junit:junit:4.12'
}
